--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,24 @@ body{
   background-position: center;
   overflow-y: hidden;
 }
+
+
+
+/* dark mode looking scrollbar  */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #555;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #121212;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #242424;
+}
+
